--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>URU · Music</title>
+<meta charset="utf-8">
+<title>URU · Music & Video</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
@@ -13,51 +13,53 @@
   --text:#eaeaea;
   --muted:#9a9a9a;
   --accent:#1db954;
+  --soft:#232326;
 }
 
 *{box-sizing:border-box}
 
 body{
   margin:0;
+  font-family:system-ui,-apple-system,Segoe UI,Roboto;
   background:linear-gradient(180deg,#0b0b0b,#050505);
   color:var(--text);
-  font-family:system-ui,-apple-system,Segoe UI,Roboto;
 }
 
 /* HEADER */
 header{
-  padding:18px 22px;
+  position:sticky;
+  top:0;
+  z-index:10;
+  backdrop-filter:blur(14px);
+  background:rgba(0,0,0,.6);
+  padding:16px 20px;
   display:flex;
+  gap:12px;
   align-items:center;
-  justify-content:space-between;
   border-bottom:1px solid #1f1f1f;
 }
 
 header h1{
-  font-size:1.1rem;
-  letter-spacing:2px;
-  font-weight:600;
+  margin:0;
+  font-size:1rem;
+  letter-spacing:.5px;
 }
 
-/* SEARCH */
-.search{
-  width:100%;
-  margin:20px auto;
-  max-width:900px;
-  padding:14px 16px;
-  border-radius:999px;
+header input{
+  flex:1;
+  background:var(--soft);
   border:none;
-  outline:none;
-  background:#1a1a1a;
   color:#fff;
-  font-size:0.9rem;
+  padding:10px 14px;
+  border-radius:999px;
+  outline:none;
 }
 
-/* GRID */
+/* MAIN */
 main{
   max-width:1100px;
   margin:auto;
-  padding:0 16px 60px;
+  padding:20px 16px 60px;
 }
 
 .grid{
@@ -75,14 +77,25 @@ main{
 }
 
 .card:hover{
+  transform:translateY(-4px);
   background:#222;
 }
 
-/* TITLE */
 .title{
-  font-size:0.85rem;
+  font-size:.85rem;
   color:#ddd;
   margin-bottom:8px;
+}
+
+/* COVER */
+.cover{
+  height:120px;
+  border-radius:12px;
+  background:
+    radial-gradient(circle at 30% 30%, #1db95433, transparent 60%),
+    radial-gradient(circle at 70% 70%, #ffffff22, transparent 60%),
+    #121212;
+  margin-bottom:10px;
 }
 
 /* MEDIA */
@@ -90,11 +103,21 @@ audio,video{
   width:100%;
   border-radius:10px;
   background:#000;
+  margin-top:8px;
 }
 
-/* CINEMA MODE */
+/* CINEMA */
+.cinema{
+  position:fixed;
+  inset:0;
+  background:#000;
+  z-index:999;
+  padding:20px;
+}
+
 .cinema video{
-  aspect-ratio:16/9;
+  width:100%;
+  height:100%;
 }
 
 /* FOOTER */
@@ -104,23 +127,6 @@ footer{
   font-size:.75rem;
   padding:24px;
 }
-
-/* ANIMATED COVER (MONO) */
-.cover{
-  height:120px;
-  border-radius:12px;
-  background:
-    radial-gradient(circle at 30% 30%, #1db95433, transparent 60%),
-    radial-gradient(circle at 70% 70%, #ffffff22, transparent 60%),
-    #121212;
-  animation:pulse 6s infinite alternate;
-  margin-bottom:10px;
-}
-
-@keyframes pulse{
-  from{filter:brightness(1)}
-  to{filter:brightness(1.3)}
-}
 </style>
 </head>
 
@@ -128,143 +134,83 @@ footer{
 
 <header>
   <h1>URU</h1>
+  <input id="search" placeholder="Buscar música o video…">
 </header>
 
 <main>
+  <div class="grid" id="grid">
 
-<input class="search" placeholder="Buscar audio o video…"
-oninput="filterMedia(this.value)">
+    <!-- AUDIOS -->
+    <div class="card" data-name="aceso">
+      <div class="cover"></div>
+      <div class="title">Aceso</div>
+      <audio src="audio/aceso.mp3" controls></audio>
+    </div>
 
-<div class="grid" id="grid">
+    <div class="card" data-name="dd">
+      <div class="cover"></div>
+      <div class="title">DD</div>
+      <audio src="audio/dd.mp3" controls></audio>
+    </div>
 
-  <!-- 🎵 AUDIOS -->
-  <div class="card" data-name="aceso">
-    <div class="cover"></div>
-    <div class="title">Aceso</div>
-    <audio controls src="audio/aceso.mp3"></audio>
+    <div class="card" data-name="del">
+      <div class="cover"></div>
+      <div class="title">Del</div>
+      <audio src="audio/del.mp3" controls></audio>
+    </div>
+
+    <!-- VIDEOS -->
+    <div class="card" data-name="ami">
+      <div class="cover"></div>
+      <div class="title">Ami</div>
+      <video src="videos/ami.mp4" controls></video>
+    </div>
+
+    <div class="card" data-name="caminar">
+      <div class="cover"></div>
+      <div class="title">Caminar</div>
+      <video src="videos/caminar.mp4" controls></video>
+    </div>
+
   </div>
-
-  <div class="card" data-name="dd">
-    <div class="cover"></div>
-    <div class="title">DD</div>
-    <audio controls src="audio/dd.mp3"></audio>
-  </div>
-
-  <div class="card" data-name="del">
-    <div class="cover"></div>
-    <div class="title">Del</div>
-    <audio controls src="audio/del.mp3"></audio>
-  </div>
-
-  <div class="card" data-name="expancivo">
-    <div class="cover"></div>
-    <div class="title">Expancivo</div>
-    <audio controls src="audio/expancivo.mp3"></audio>
-  </div>
-
-  <div class="card" data-name="gds">
-    <div class="cover"></div>
-    <div class="title">GDS</div>
-    <audio controls src="audio/gds.mp3"></audio>
-  </div>
-
-  <div class="card" data-name="inbi">
-    <div class="cover"></div>
-    <div class="title">Inbi</div>
-    <audio controls src="audio/inbi.mp3"></audio>
-  </div>
-
-  <div class="card" data-name="ind">
-    <div class="cover"></div>
-    <div class="title">Ind</div>
-    <audio controls src="audio/ind.mp3"></audio>
-  </div>
-
-  <div class="card" data-name="inter">
-    <div class="cover"></div>
-    <div class="title">Inter</div>
-    <audio controls src="audio/inter.mp3"></audio>
-  </div>
-
-  <div class="card" data-name="mapa">
-    <div class="cover"></div>
-    <div class="title">Mapa</div>
-    <audio controls src="audio/mapa.mp3"></audio>
-  </div>
-
-  <div class="card" data-name="navegar">
-    <div class="cover"></div>
-    <div class="title">Navegar</div>
-    <audio controls src="audio/navegar.mp3"></audio>
-  </div>
-
-  <div class="card" data-name="porr">
-    <div class="cover"></div>
-    <div class="title">Porr</div>
-    <audio controls src="audio/porr.mp3"></audio>
-  </div>
-
-  <div class="card" data-name="premi">
-    <div class="cover"></div>
-    <div class="title">Premi</div>
-    <audio controls src="audio/premi.mp3"></audio>
-  </div>
-
-  <div class="card" data-name="rune">
-    <div class="cover"></div>
-    <div class="title">Rune</div>
-    <audio controls src="audio/rune.mp3"></audio>
-  </div>
-
-  <div class="card" data-name="wera">
-    <div class="cover"></div>
-    <div class="title">Wera</div>
-    <audio controls src="audio/wera.mp3"></audio>
-  </div>
-
-  <!-- 🎥 VIDEOS -->
-  <div class="card cinema" data-name="ami">
-    <div class="title">Ami</div>
-    <video controls src="videos/ami.mp4"></video>
-  </div>
-
-  <div class="card cinema" data-name="caminar">
-    <div class="title">Caminar</div>
-    <video controls src="videos/caminar.mp4"></video>
-  </div>
-
-  <div class="card cinema" data-name="enmi">
-    <div class="title">Enmi</div>
-    <video controls src="videos/enmi.mp4"></video>
-  </div>
-
-  <div class="card cinema" data-name="envidi">
-    <div class="title">Envidi</div>
-    <video controls src="videos/envidi.mp4"></video>
-  </div>
-
-</div>
 </main>
 
-<footer>
-© 2025 · URU
-</footer>
+<footer>© 2025 · URU</footer>
 
 <script>
+const search = document.getElementById("search");
+const cards = document.querySelectorAll(".card");
 const media = document.querySelectorAll("audio, video");
 
-media.forEach(m=>{
-  m.addEventListener("play",()=>{
-    media.forEach(o=>{ if(o!==m) o.pause(); });
+/* BUSCADOR */
+search.addEventListener("input", () => {
+  const q = search.value.toLowerCase();
+  cards.forEach(card => {
+    card.style.display =
+      card.dataset.name.includes(q) ? "block" : "none";
   });
 });
 
-function filterMedia(value){
-  value=value.toLowerCase();
-  document.querySelectorAll(".card").forEach(c=>{
-    c.style.display = c.dataset.name.includes(value) ? "block" : "none";
+/* PAUSAR OTROS */
+media.forEach(m => {
+  m.addEventListener("play", () => {
+    media.forEach(o => { if (o !== m) o.pause(); });
   });
-}
+});
+
+/* MODO CINE */
+document.querySelectorAll("video").forEach(v => {
+  v.addEventListener("dblclick", () => {
+    const wrap = document.createElement("div");
+    wrap.className = "cinema";
+    const clone = v.cloneNode(true);
+    clone.controls = true;
+    clone.play();
+    wrap.appendChild(clone);
+    wrap.onclick = () => wrap.remove();
+    document.body.appendChild(wrap);
+  });
+});
 </script>
 
 </body>
