--- a/index.html
+++ b/index.html
@@ -8,207 +8,189 @@
 <style>
 :root{
   --bg:#0b0b0b;
-  --panel:#141414;
   --card:#1c1c1c;
   --text:#eaeaea;
   --muted:#9a9a9a;
   --accent:#1db954;
-  --soft:#232326;
 }
 
 *{box-sizing:border-box}
 
 body{
   margin:0;
-  font-family:system-ui,-apple-system,Segoe UI,Roboto;
-  background:linear-gradient(180deg,#0b0b0b,#050505);
+  font-family:system-ui,Segoe UI,Roboto;
+  background:#000;
   color:var(--text);
 }
 
-/* HEADER */
 header{
-  position:sticky;
-  top:0;
-  z-index:10;
-  backdrop-filter:blur(14px);
-  background:rgba(0,0,0,.6);
-  padding:16px 20px;
+  padding:16px;
+  text-align:center;
+  font-weight:600;
+  letter-spacing:1px;
+}
+
+.tabs{
   display:flex;
-  gap:12px;
-  align-items:center;
-  border-bottom:1px solid #1f1f1f;
+  justify-content:center;
+  gap:10px;
+  margin-bottom:16px;
 }
 
-header h1{
-  margin:0;
-  font-size:1rem;
-  letter-spacing:.5px;
+.tabs button{
+  background:#111;
+  border:1px solid #222;
+  color:#aaa;
+  padding:8px 16px;
+  border-radius:999px;
+  cursor:pointer;
 }
 
-header input{
-  flex:1;
-  background:var(--soft);
-  border:none;
+.tabs button.active{
   color:#fff;
+  border-color:var(--accent);
+}
+
+.search{
+  display:block;
+  margin:0 auto 20px;
+  width:90%;
+  max-width:400px;
   padding:10px 14px;
   border-radius:999px;
-  outline:none;
-}
-
-/* MAIN */
-main{
-  max-width:1100px;
-  margin:auto;
-  padding:20px 16px 60px;
+  border:none;
+  background:#1a1a1a;
+  color:#fff;
 }
 
 .grid{
   display:grid;
-  grid-template-columns:repeat(auto-fill,minmax(260px,1fr));
+  grid-template-columns:repeat(auto-fill,minmax(240px,1fr));
   gap:16px;
+  padding:0 16px 40px;
 }
 
-/* CARD */
 .card{
   background:var(--card);
   border-radius:14px;
   padding:12px;
-  transition:.2s;
 }
 
-.card:hover{
-  transform:translateY(-4px);
-  background:#222;
+.thumb{
+  width:100%;
+  aspect-ratio:16/9;
+  border-radius:10px;
+  object-fit:cover;
+  margin-bottom:8px;
 }
 
 .title{
   font-size:.85rem;
   color:#ddd;
-  margin-bottom:8px;
+  margin-bottom:6px;
 }
 
-/* COVER */
-.cover{
-  height:120px;
-  border-radius:12px;
-  background:
-    radial-gradient(circle at 30% 30%, #1db95433, transparent 60%),
-    radial-gradient(circle at 70% 70%, #ffffff22, transparent 60%),
-    #121212;
-  margin-bottom:10px;
-}
-
-/* MEDIA */
 audio,video{
   width:100%;
   border-radius:10px;
   background:#000;
-  margin-top:8px;
 }
 
-/* CINEMA */
-.cinema{
-  position:fixed;
-  inset:0;
-  background:#000;
-  z-index:999;
-  padding:20px;
-}
-
-.cinema video{
-  width:100%;
-  height:100%;
-}
-
-/* FOOTER */
-footer{
-  text-align:center;
-  color:#666;
-  font-size:.75rem;
-  padding:24px;
-}
+.hidden{display:none}
 </style>
 </head>
 
 <body>
 
-<header>
-  <h1>URU</h1>
-  <input id="search" placeholder="Buscar música o video…">
-</header>
+<header>URU</header>
 
-<main>
-  <div class="grid" id="grid">
+<div class="tabs">
+  <button class="active" onclick="showTab('audio')">🎵 Audios</button>
+  <button onclick="showTab('video')">🎥 Videos</button>
+</div>
 
-    <!-- AUDIOS -->
-    <div class="card" data-name="aceso">
-      <div class="cover"></div>
-      <div class="title">Aceso</div>
-      <audio src="audio/aceso.mp3" controls></audio>
-    </div>
+<input class="search" id="search" placeholder="Buscar…">
 
-    <div class="card" data-name="dd">
-      <div class="cover"></div>
-      <div class="title">DD</div>
-      <audio src="audio/dd.mp3" controls></audio>
-    </div>
+<!-- AUDIOS -->
+<div class="grid" id="audio">
 
-    <div class="card" data-name="del">
-      <div class="cover"></div>
-      <div class="title">Del</div>
-      <audio src="audio/del.mp3" controls></audio>
-    </div>
-
-    <!-- VIDEOS -->
-    <div class="card" data-name="ami">
-      <div class="cover"></div>
-      <div class="title">Ami</div>
-      <video src="videos/ami.mp4" controls></video>
-    </div>
-
-    <div class="card" data-name="caminar">
-      <div class="cover"></div>
-      <div class="title">Caminar</div>
-      <video src="videos/caminar.mp4" controls></video>
-    </div>
-
+  <div class="card" data-name="aceso">
+    <img class="thumb" src="thumbs/aceso.jpg">
+    <div class="title">Aceso</div>
+    <audio src="audio/aceso.mp3" controls></audio>
   </div>
-</main>
 
-<footer>© 2025 · URU</footer>
+  <div class="card" data-name="dd">
+    <img class="thumb" src="thumbs/dd.jpg">
+    <div class="title">DD</div>
+    <audio src="audio/dd.mp3" controls></audio>
+  </div>
+
+  <div class="card" data-name="del">
+    <img class="thumb" src="thumbs/del.jpg">
+    <div class="title">Del</div>
+    <audio src="audio/del.mp3" controls></audio>
+  </div>
+
+  <div class="card" data-name="expancivo">
+    <img class="thumb" src="thumbs/expancivo.jpg">
+    <div class="title">Expancivo</div>
+    <audio src="audio/expancivo.mp3" controls></audio>
+  </div>
+
+  <!-- repite igual con los demás mp3 -->
+
+</div>
+
+<!-- VIDEOS -->
+<div class="grid hidden" id="video">
+
+  <div class="card" data-name="ami">
+    <img class="thumb" src="thumbs/ami.jpg">
+    <div class="title">Ami</div>
+    <video src="videos/ami.mp4" controls></video>
+  </div>
+
+  <div class="card" data-name="caminar">
+    <img class="thumb" src="thumbs/caminar.jpg">
+    <div class="title">Caminar</div>
+    <video src="videos/caminar.mp4" controls></video>
+  </div>
+
+  <div class="card" data-name="cielo">
+    <img class="thumb" src="thumbs/cielo.jpg">
+    <div class="title">Cielo</div>
+    <video src="videos/cielo.mp4" controls></video>
+  </div>
+
+  <!-- repite con los demás mp4 -->
+
+</div>
 
 <script>
-const search = document.getElementById("search");
-const cards = document.querySelectorAll(".card");
-const media = document.querySelectorAll("audio, video");
+function showTab(tab){
+  document.querySelectorAll('.tabs button')
+    .forEach(b=>b.classList.remove('active'));
+  event.target.classList.add('active');
 
-/* BUSCADOR */
-search.addEventListener("input", () => {
-  const q = search.value.toLowerCase();
-  cards.forEach(card => {
-    card.style.display =
-      card.dataset.name.includes(q) ? "block" : "none";
+  document.getElementById('audio').classList.toggle('hidden',tab!=='audio');
+  document.getElementById('video').classList.toggle('hidden',tab!=='video');
+}
+
+/* buscador */
+const search=document.getElementById('search');
+search.addEventListener('input',()=>{
+  const q=search.value.toLowerCase();
+  document.querySelectorAll('.card').forEach(c=>{
+    c.style.display=c.dataset.name.includes(q)?'block':'none';
   });
 });
 
-/* PAUSAR OTROS */
-media.forEach(m => {
-  m.addEventListener("play", () => {
-    media.forEach(o => { if (o !== m) o.pause(); });
-  });
-});
-
-/* MODO CINE */
-document.querySelectorAll("video").forEach(v => {
-  v.addEventListener("dblclick", () => {
-    const wrap = document.createElement("div");
-    wrap.className = "cinema";
-    const clone = v.cloneNode(true);
-    clone.controls = true;
-    clone.play();
-    wrap.appendChild(clone);
-    wrap.onclick = () => wrap.remove();
-    document.body.appendChild(wrap);
+/* pausar otros */
+const media=document.querySelectorAll('audio,video');
+media.forEach(m=>{
+  m.addEventListener('play',()=>{
+    media.forEach(o=>{if(o!==m)o.pause()});
   });
 });
 </script>
