--- a/index.html
+++ b/index.html
@@ -125,29 +125,29 @@ audio{
   <aside class="sidebar">
 
     <div class="section">🎵 AUDIOS</div>
-    <div class="item" onclick="playAudio('aceso','audio/aceso.mp3')">Aceso</div>
-    <div class="item" onclick="playAudio('dd','audio/dd.mp3')">DD</div>
-    <div class="item" onclick="playAudio('del','audio/del.mp3')">Del</div>
-    <div class="item" onclick="playAudio('expancivo','audio/expancivo.mp3')">Expancivo</div>
-    <div class="item" onclick="playAudio('gds','audio/gds.mp3')">GDS</div>
-    <div class="item" onclick="playAudio('inbi','audio/inbi.mp3')">Inbi</div>
-    <div class="item" onclick="playAudio('ind','audio/ind.mp3')">Ind</div>
-    <div class="item" onclick="playAudio('inter','audio/inter.mp3')">Inter</div>
-    <div class="item" onclick="playAudio('mapa','audio/mapa.mp3')">Mapa</div>
-    <div class="item" onclick="playAudio('navegar','audio/navegar.mp3')">Navegar</div>
-    <div class="item" onclick="playAudio('porr','audio/porr.mp3')">Porr</div>
-    <div class="item" onclick="playAudio('premi','audio/premi.mp3')">Premi</div>
-    <div class="item" onclick="playAudio('rune','audio/rune.mp3')">Rune</div>
-    <div class="item" onclick="playAudio('wera','audio/wera.mp3')">Wera</div>
+    <div class="item" onclick="playAudio('Aceso','audio/aceso.mp3',event)">Aceso</div>
+    <div class="item" onclick="playAudio('DD','audio/dd.mp3',event)">DD</div>
+    <div class="item" onclick="playAudio('Del','audio/del.mp3',event)">Del</div>
+    <div class="item" onclick="playAudio('Expancivo','audio/expancivo.mp3',event)">Expancivo</div>
+    <div class="item" onclick="playAudio('GDS','audio/gds.mp3',event)">GDS</div>
+    <div class="item" onclick="playAudio('Inbi','audio/inbi.mp3',event)">Inbi</div>
+    <div class="item" onclick="playAudio('Ind','audio/ind.mp3',event)">Ind</div>
+    <div class="item" onclick="playAudio('Inter','audio/inter.mp3',event)">Inter</div>
+    <div class="item" onclick="playAudio('Mapa','audio/mapa.mp3',event)">Mapa</div>
+    <div class="item" onclick="playAudio('Navegar','audio/navegar.mp3',event)">Navegar</div>
+    <div class="item" onclick="playAudio('Porr','audio/porr.mp3',event)">Porr</div>
+    <div class="item" onclick="playAudio('Premi','audio/premi.mp3',event)">Premi</div>
+    <div class="item" onclick="playAudio('Rune','audio/rune.mp3',event)">Rune</div>
+    <div class="item" onclick="playAudio('Wera','audio/wera.mp3',event)">Wera</div>
 
     <div class="section">🎥 VIDEOS</div>
-    <div class="item" onclick="playVideo('Ami','videos/ami.mp4')">Ami</div>
-    <div class="item" onclick="playVideo('Caminar','videos/caminar.mp4')">Caminar</div>
-    <div class="item" onclick="playVideo('Cielo','videos/cielo.mp4')">Cielo</div>
-    <div class="item" onclick="playVideo('Enmi','videos/enmi.mp4')">Enmi</div>
-    <div class="item" onclick="playVideo('Envidi','videos/envidi.mp4')">Envidi</div>
-    <div class="item" onclick="playVideo('Mejura','videos/mejura.mp4')">Mejura</div>
-    <div class="item" onclick="playVideo('Song','videos/song.mp4')">Song</div>
+    <div class="item" onclick="playVideo('Ami','videos/ami.mp4',event)">Ami</div>
+    <div class="item" onclick="playVideo('Caminar','videos/caminar.mp4',event)">Caminar</div>
+    <div class="item" onclick="playVideo('Cielo','videos/cielo.mp4',event)">Cielo</div>
+    <div class="item" onclick="playVideo('Enmi','videos/enmi.mp4',event)">Enmi</div>
+    <div class="item" onclick="playVideo('Envidi','videos/envidi.mp4',event)">Envidi</div>
+    <div class="item" onclick="playVideo('Mejura','videos/mejura.mp4',event)">Mejura</div>
+    <div class="item" onclick="playVideo('Song','videos/song.mp4',event)">Song</div>
 
   </aside>
 
@@ -166,22 +166,20 @@ const stage=document.getElementById('stage');
 const info=document.getElementById('info');
 const items=document.querySelectorAll('.item');
 
-let current=null;
-
 function clearActive(){
   items.forEach(i=>i.classList.remove('active'));
 }
 
-function playAudio(name,src){
+function playAudio(name,src,e){
   clearActive();
-  event.target.classList.add('active');
+  e.target.classList.add('active');
   stage.innerHTML=`<audio src="${src}" controls autoplay></audio>`;
   info.textContent="🎵 "+name;
 }
 
-function playVideo(name,src){
+function playVideo(name,src,e){
   clearActive();
-  event.target.classList.add('active');
+  e.target.classList.add('active');
   stage.innerHTML=`<video src="${src}" controls autoplay></video>`;
   info.textContent="🎥 "+name;
 }
